# KinovaDessin

./: #vibrate.cpp#  .#vibrate.cpp  .gitignore  .gitignore~  CMakeLists.txt  ENVexport.sh  clockexample.cpp  compile_flags.txt  daemon.cpp  goto.cpp  gotohome.cpp  main.h  read  readMe.md  vibrate.cpp
Web/: API.php  doc.md  gestionKinova.js  index.php  pageKinova.css  pageKinova.html
Web/Controller/: controller.LMG.php  controllerGestionCode.php
Web/model/: modelCommands.php  modelParameters.php
doc/api_cpp/examples/: #CMakeLists.txt#
doc/api_cpp/examples/000-Getting_started/.ccls-cache/@kinova_API@api_cpp@examples@000-Getting_started/: 01-api_creation.cpp.blob  testing_perso.cpp  testing_perso.cpp.blob
doc/api_cpp/examples/200-Actuator_low_level_control/: #01-actuator_low_level_velocity_control.cpp#  .#01-actuator_low_level_velocity_control.cpp
include/: KDetailedException.h  TransportClientUdp.h
jsonTemplate/: commands.json  parameters.json  postCommands.json  robotsInformation.json
robot/: robot.cpp  robot.h  robot.hpp  structJson.h  utilities.h
